Added in the chequing and savings accounts (Step 3 & 4)

--- a/BankAccount/BankAccount.csproj
+++ b/BankAccount/BankAccount.csproj
@@ -45,7 +45,9 @@
   <ItemGroup>
     <Compile Include="Entities\Account.cs" />
     <Compile Include="Entities\AccountStatus.cs" />
+    <Compile Include="Entities\ChequingAccount.cs" />
     <Compile Include="Entities\IAccount.cs" />
+    <Compile Include="Entities\SavingsAccount.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
