Implemented the exception handling and extension methods (Step 8 & 9)

--- a/BankAccount/BankAccount.csproj
+++ b/BankAccount/BankAccount.csproj
@@ -50,11 +50,14 @@
     <Compile Include="Entities\IAccount.cs" />
     <Compile Include="Entities\IExchangable.cs" />
     <Compile Include="Entities\SavingsAccount.cs" />
+    <Compile Include="Extensions\AccountExtension.cs" />
+    <Compile Include="Extensions\DoubleExtension.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
